10663
The simplified example actually also fails in 2.10.3, albeit in a different spot, with:

{code}
test/files/pos/existential-java-case-class/Client.scala:1: error: type arguments [_$1] do not conform to class J's type parameter bounds [T <: J[String]]
case class CC(x: J[_]) {
           ^
{code}
